reuse translations: finish troubleshooting

--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/05.domains/dns_local_network.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/05.domains/dns_local_network.mdx
@@ -1,5 +1,5 @@
 ---
-title: Local network access to your server
+title: Accès réseau local pour votre serveur
 ---
 
 After completing your server installation, it is possible that your domain will not be accessible through the local network. This is an issue known as [hairpinning](http://en.wikipedia.org/wiki/Hairpinning) - a feature that is not well supported by some internet routers.
