--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/10.change_admin_password.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/10.change_admin_password.md
@@ -1,20 +1,19 @@
 ---
-title: Changing the administration password
+title: Changer le mot de passe d'administration
 ---
 
-You may want to change your administrator password for security reason or because you forgot it.
+Vous voudrez peut-être changer votre mot de passe d'administrateur pour des raisons de sécurité ou parce que vous l'avez oublié.
 
-If you forgot your password or are unable to connect using the `admin` user, you
-may still be able to change the password if you're able to login as `root` on
-SSH (from your local network! or using a rescue mode if you're on a VPS...)
+Si vous avez oublié votre mot de passe ou si vous ne pouvez pas vous connecter en utilisant l'utilisateur `admin`, vous
+pouvez peut-être encore changer le mot de passe en vous connectant en tant que `root`, sur
+SSH (à partir de votre réseau local ! ou en utilisant un mode rescure si vous êtes sur un VPS...)
 
-## Using the web administration interface
+## Sur la webadmin
 
-First, connect to your web administration.
+1. Connectez-vous à l'interface web d'administration.
+2. Allez dans la section Outis > Changer le mot de passe d’administration.
 
-Then go to Tools > Change administration password.
-
-## Using the command line interface
+## En ligne de commande
 
 ```bash
 yunohost tools rootpw
