--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/15.noaccess.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/15.noaccess.md
@@ -1,137 +1,149 @@
 ---
-title: Get access back into YunoHost
+title: Récupérer l'accès à son YunoHost
 ---
 
-There are several reasons that could lead to one administrator's access being partially or completely blocked off their YunoHost server. In numerous cases, one of the access methods is blocked, but others are not.
+Il existe de nombreuses causes pouvant empêcher totalement ou partiellement d'accéder en administrateur à un serveur YunoHost. Dans de nombreux cas, un des moyens d'accès est inaccessible, mais les autres sont fonctionnels.
 
-This page will help you diagnose the issue, get back access, and if needed repair your system. Most common causes are listed first, so follow the tutorial from top to bottom.
+Cette page va vous aider à diagnostiquer, obtenir un accès et si besoin réparer votre système. Les pannes les plus courantes sont priorisées de haut en bas. Il vous suffit de tester chaque hypothèse.
 
-## You have access to the server with its local IP address, but not its domain name
+## Vous avez accès au serveur via l'adresse IP, mais pas avec le nom de domaine ?
 
-### If you are self-hosted at home: fix ports forwarding
+### Si vous êtes auto-hébergé à la maison : il faut configurer les redirection de ports
 
-Check that you are getting access to the server by using its public IP (you can find at [https://ip.yunohost.org](https://ip.yunohost.org). If this does not work:
+Vérifier que vous arrivez à accéder au serveur en utilisant son IP globale (que vous pouvez trouver sur [https://ip.yunohost.org](https://ip.yunohost.org)). Si cela ne fonctionne pas:
 
-- Make sure you have [set up forwarding](/install/post_install/isp_box_config)
-- Some ISP routers do not support *hairpinning*, which prevents you from reaching your server by its domain name from within your local network. If so, you can use a cellular connection, or tweak your `hosts` file on your computer to make it bind your domain name to the local IP address instead of the public one.
+- Assurez-vous d'avoir [configuré les redirections de ports](/install/post_install/isp_box_config)
+- Certaines box de FAI ne supportent pas le hairpinning et vous ne pouvez pas accéder à votre serveur depuis l'intérieur du réseau local (sauf à passer par l'IP locale). Pour contourner le problème, vous pouvez utiliser un des moyens suivants:
+  - utiliser une connexion cellulaire (4/5G)
+  - modifier le fichier `/etc/hosts` sur vos équipements
+  - déclarer l'ip locale de YunoHost comme resolveur DNS dans votre routeur (partie DHCP) et ouvrir le port `53` UDP sur votre YunoHost en faisant attention de ne pas activer l'upnp sur le port `53`. Surtout, n'ouvrez pas le port `53` de votre routeur.
 
-### Configure DNS records
+### Il faut configurer vos enregistrement DNS
 
 :::tip
-This is not a problem if you are using a domain from `nohost.me`, `noho.st` or `ynh.fr`)
+Ce n'est pas nécessaire si vous utilisez un domaine de type `nohost.me`, `noho.st` ou `ynh.fr`)
 :::
 
-You have to configure your [DNS records](/install/post_install/dns_config) (at least `A` records, and `AAAA` if you have an IPv6 connection).
+Il vous faut configurer vos enregistrement DNS comme expliqué sur [cette page](/install/post_install/dns_config) (à minima l'enregistrement A, et AAAA si vous avez de l'IPv6).
 
-You can check that the DNS records are correct by comparing the results given by [this service](https://www.whatsmydns.net/) with the [IP given by our service](https://ip.yunohost.org).
+Vous pouvez valider que les enregistrements DNS sont corrects en comparant le résultat de[this service](https://www.whatsmydns.net/) avec l'IP globale de votre serveur (si vous êtes hébergé à la maison, vous pouvez obtenir cette IP sur [IP given by our service](https://ip.yunohost.org).
 
-### Other probable causes
+### Autres causes possibles
 
-- You domain `noho.st`, `nohost.me`, or `ynh.fr` is unreachable following a failure on YunoHost's infrastructure. Check the [forum](https://forum.yunohost.org/) for announcements or people posting about the same issue.
-- Your domain name may be expired. Check that on your registrar's client panel, or by using the command `whois yourdomain.tld`.
-- You have a dynamic IP address. In that case, you need to set up a script or a client that takes care of regularly update it. Refer to the page on [DNS with a dynamic IP](/administer/tutorials/domains/dns_dynamicip) to see how. You can also use a domain `nohost.me`, `noho.st` or `ynh.fr` that includes this features.
+- Votre nom de domaine `nohost.me`, `noho.st` ou `ynh.fr` est inaccessible suite à une panne de l'infra YunoHost. Vérifiez sur le forum si d'autre personnes signalent le même problème.
+- Votre nom de domaine est peut-être expiré. Vous pouvez vérifier que votre nom de domaine a expiré en vous connectant sur l'interface de votre registrar ou en utilisant le whois par exemple via la commande `whois NOM_DE_DOMAINE`.
+- Vous avez une IP dynamique. Dans ce cas, il faut mettre en place un script qui se charge de mettre à jour régulièrement votre IP (ou d'utiliser un nom de domaine en `nohost.me`, `noho.st` ou `ynh.fr` qui inclue un tel mécanisme)
 
-## You are getting a certificate error that prevents you from reaching the webadmin
+## Vous êtes face à une erreur de certificat qui vous empêche d’accéder à la webadmin
 
 - A certificate error may be displayed if you have made a typo in the address bar of your browser.
 
-- If you have just installed your server, or just installed a new domain, it uses a self-signed certificate. In that case, it is possible and understandable to add a *temporary* security exception so that you can [install a Let's Encrypt certificate](/administer/admin_guide/domains/certificate), provided you have a secure Internet connection.
+Si vous venez d'installer votre serveur ou d'ajouter un nouveau domaine, il utilise pour le moment un certificat auto-signé. Dans ce cas, il devrait être possible et légitime d'ajouter *exceptionnellement* une exception de sécurité le temps d'[installer un certificat Let's Encrypt](/administer/admin_guide/domains/certificate) à condition d'être sur une connexion internet sûre (pas avec Tor Browser par exemple).
 
-## You have access via SSH but not via the webadmin, or inversely
+Une erreur de certificat peut également être affichée dans certain cas où vous avez fait une faute de frappe dans la barre d'adresse de votre navigateur.
 
-### You are trying to log in with SSH as `root` instead of `admin` user
+## Vous avez accès en SSH mais pas à la Web admin ou inversement
 
-By default, SSH connection has to be made as `admin`. It possible to log into the server as `root` *only from the local network of the server*. If your server is a VPS, the web console or VNC provided by VPS providers may work.
+### Vous essayez de vous connecter en SSH avec `root` plutôt qu'avec `admin`
 
-If you are running `yunohost` commands in the CLI as `admin`, you have to call them with `sudo` before (for example `sudo yunohost user list`). You can also become `root` by running `sudo su`.
+Par défaut, la connexion en SSH doit s'effectuer avec l'utilisateur `admin`. Il est possible de se connecter à la machine avec l'utilisateur `root` *seulement depuis le réseau local* sur lequel se situe le serveur (ou bien via la console web / VNC pour des VPS).
 
-### You have been temporarily banned
+Lorsque vous exécutez des commandes `yunohost` en tant qu'admin, il faut les précéder de la commande `sudo` (par exemple `sudo yunohost user list`). Vous pouvez également devenir `root` en tapant `sudo su`.
 
-Your YunoHost server includes a service, Fail2ban, which automatically bans IPs that fail several times in a row to log in. In some cases it can be software (e.g. Nextcloud client) that are confifured with an old password, or a user who has the same IP as you have.
+### Vous avez été banni temporairement
 
-If you have been banned while trying to access a web page, and only web pages are unreachable, you may have access to your server via SSH. Similarly, if you have been banned from SSH, webadmin access may work.
+Votre serveur YunoHost inclut un mécanisme (Fail2Ban) qui banni automatiquement les IPs qui échouent plusieurs fois à s'authentifier. Dans certains cas, il peut s'agir d'un programme (par exemple un client Nextcloud) qui est configuré avec un ancien mot de passe ou d'un utilisateur qui utilise la même IP que vous.
 
-If you have been banned from both SSH and webadmin, you can try to reach your server through another IP address. For example through the cellular network of your phone, a VPN, Tor, or another proxy.
+Si vous avez été banni en tentant d'accéder à une page web, seul les pages web sont inaccessibles, vous devriez donc pouvoir accéder au serveur en SSH. De même, si vous avez été banni en SSH vous devriez pouvoir accéder à la webadmin.
 
-See also : [unban an IP on Fail2Ban](/administer/troubleshooting/fail2ban)
+Si vous avez été banni à la fois en SSH et à la webadmin, vous pouvez essayer d'accéder à votre serveur avec une autre IP, par exemple en utilisant la 4G d'un smartphone ou en utilisant Tor Browser.
+
+Voir aussi : [débannir une IP sur Fail2Ban](/administer/troubleshooting/fail2ban)
 
 :::note
-Ban are usually 10 to 12-minute-long, and on IPv4 only.
+Le bannissement dure en général 10 à 12 minutes. Le bannissement n'est actif qu'en IPv4.
 :::
 
-### NGINX web server is broken
+### Le serveur web NGINX est cassé
 
-Maybe the NGINX web server is out of order. You can check that [trough SSH](/administer/admin_guide/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
+Peut-être que le serveur web NGINX est en panne. Vous pouvez vérifier cela [en ssh](/administer/admin_guide/command_line) avec `yunohost service status nginx`. Si il est en panne, vérifiez que la configuration ne comporte pas d'erreur avec `nginx -t`. Si la configuration est cassée, ceci est peut-être du à une l'installation ou désinstallation d'une application de mauvaise qualité... Si vous êtes perdu, [demandez de l'aide](/community/help).
 
-The NGINX or SSH servers may have been killed due to a lack of storage space, RAM, or swap.
+Il se peut également que le serveur web (NGINX) ou le serveur ssh aient été tués suite à un manque d'espace disque ou de RAM / swap.
 
-- Try restarting the service with `systemctl restart nginx`.
-- You can check used storage with `df -h`. If one of your partitions is full, you need to identify what fills it and make room. You can use `ncdu` command (install it with `apt install ncdu`) to browse from the root directory: `ncdu /`
-- You can check RAM and swap usage with `free -h`. Depending on the result, it may be necessary to optimize your server to use less RAM (removal of heavy or unused apps...), add more RAM or add a swap file.
+- Tentez de relancer le service avec `systemctl restart nginx`.
+- Vous pouvez contrôler l'espace disque utilisé avec `df -h`. Si une de vos partitions est remplie à 100%, il faut identifier ce qui prend de la place sur votre système et faire de la place. Il est possible d'installer l'utilitaire `ncdu` avec `apt install ncdu` puis de faire `ncdu /` pour analyser la taille des dossiers de toute l'arborescence.
+- Vous pouvez contrôler l'utilisation de la RAM / swap avec `free -h`. En fonction des résultats, il peut être nécessaire d'optimiser votre serveur pour qu'il utilise moins de RAM (suppression d'app lourdes et inutiles...), d'ajouter de la RAM ou d'ajouter un fichier de swap.
 
-### Your server is reachable by IPv6, but not IPv4, or inversely
+### Votre serveur est accessible en IPv6 mais pas en IPv4 ou inversement
 
-You can check that by `ping`ing it:
+Vous pouvez le vérifier en tentant de faire des ping sur votre serveur en IPv4 et en IPv6.
 
 ```bash
 ping -4 yourdomain.tld # or its IPv4
 ping -6 yourdomain.tld # or its IPv6
 ```
 
-If one of the two is working, use it to connect by SSH or the webadmin.
 
-If none are working, you need to resolv your connection issue. In some cases, an update of your router may have enabled IPv6 and DNS configuration may be disrupted.
+Dans un tel cas, il est possible que vous arriviez à accéder à votre web admin en IPv6 mais pas en SSH potentiellement en IPv4 par défaut...
 
-## Webadmin is working, but some web apps are returning 502 errors
+Dans ce cas il faut résoudre votre problème de connectivité.
 
-It is highly probable that the underlying service for these apps is failing (e.g. PHP apps requiring `php7.0-fpm` or `php7.3-fpm`). You can then try to restart the services, and/or ask for [help](/community/help)
+Dans certains, cas une mise à jour de votre box a activé l'IPv6, entraînant des problèmes de configuration au niveau de votre nom de domaine.
 
-## You have lost your admin password, or the password is seemingly wrong
+## La webadmin fonctionne, mais certaines applications web me renvoient une erreur 502
 
-If you can reach the webadmin login page (force reload with `CTRL + F5` to be sure), and you cannot log in, your password is probably wrong.
+Il est fort probablement que le service correspondant à ces applications soit en panne (typiquement pour les applications PHP, il s'agit de `php7.0-fpm` ou `php7.3-fpm`). Vous pouvez alors tenter de relancer le service, et si cela ne fonctionne pas, regarder les logs du service correspondant et/ou [demander de l'aide](/community/help).
 
-If yoy are sure of your passord, it may be due to the `slapd` service failing. If that's the case, log into the server by SSH as `root`.
+## Vous avez perdu votre mot de passe administrateur ? (ou bien le mot de passe est refusé)
 
-- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/administer/admin_guide/command_line)`.
-- If your server is a VPS, your provider may offer a web console.
+Si vous arrivez à afficher la page web d'administration (forcez le rafraîchissement avec CTRL + F5 pour être sur) et que vous n'arrivez pas à vous connectez, vous avez probablement un mot de passe erroné.
 
-Once logged in, you have to check the state of the service with `yunohost service status slapd` and/or reset your admin password with `yunohost tools adminpw`.
+Si vous êtes certain du mot de passe, il est possible que le service SLAPD qui gère l'authentification soit en panne. Si c'est le cas, il vous faut vous connecter en `root`.
 
-If this is still failing, on a VPS you may be able to reboot in rescue mode. Do not hesitate to ask for [help](/community/help)
+- Si votre serveur est chez vous, vous avez sans doute accès au réseau local du serveur. Depuis ce réseau, vous pouvez vous connecter [en SSH](/administer/admin_guide/command_line) avec l'utilisateur `root`.
+- Si vous êtes sur un VPS, votre hébergeur vous fournit peut-être la possibilité d'avoir une console sur votre serveur depuis le navigateur web.
+Une fois connecté, il vous faut regarder l'état du service avec la commande `yunohost service status slapd` et/ou tenter de réinitialiser votre mot de passe avec la commande `yunohost tools adminpw`.
 
-:::warning
-To be completed
-:::
-
-## Your VPN expired or does not connect any more
-
-If you have a VPN with fixed IP, maybe it has expired, or the provider's infrastructure is failing.
-
-In that case, contact your VPN provider to renew it and update the parameters of the VPN Client app.
-
-Meanwhile, try reaching your server if it is at home, by:
-
-- its local IP, retrievable from your router configuration panel or `sudo arp-scan --local`
-- reaching it at `yunohost.local`, or `yunohost-2.local`, etc. depending on how many YunoHost servers are on your network.
+Si vous ne pouvez pas ou ne réussissez pas non plus à vous connecter en `root`, vous allez devoir opérer en mode rescue.
 
 :::warning
-To be completed
+À compléter
 :::
 
-## Your server does not boot
+## Votre VPN a expiré ou ne se monte plus
 
-In some cases your server may be stuck at boot. It may come from a new, buggy, kernel. Try changing to another kernel on the boot screen (via VNC for VPS).
+Si vous utilisez un VPN a IP fixe, peut être que celui-ci est arrivé à expiration ou que l'infrastructure de votre fournisseur est en difficulté.
 
-If you are in "rescue" mode with `grub`, it may be due a misconfiguration of `grub`, or a corrupted drive.
+Dans ce cas, vous pouvez peut être accéder à votre serveur avec son IP locale s'agissant probablement d'un serveur auto-hébergé chez-vous.
 
-In that case, access the storage drive from another system (your provider's "rescue" mode, live USB drive, read the SD or drive on another computer) and try to check partitions integrity with `smartctl`, `fsck`, and `mount`.
+Pour connaître votre IP locale, certaines BOX proposent une cartographie du réseau en cours avec les équipements connectés. Sinon, en ligne de commande avec linux:
 
-If disks are corrupted or hard to mount, you have to save your data and maybe reformat, reinstall, and/or change the drive. If you succeed in mounting the drive, you can use `systemd-nspawn` to access its database.
+```bash
+sudo arp-scan --local
+```
 
-Otherwise, run `grub-update`, `grub-install` again with `chroot` or with `systemd-nspawn`.
+Vous pouvez aussi essayer avec le domaine `yunohost.local`, `yunohost-2.local`, etc. selon le nombre de serveurs YunoHost sur votre réseau.
 
-## VNC or screen access does not work
+Il faut voir avec votre fournisseur de VPN pour renouveler le VPN et mettre à jour les paramètre de l'app VPN Client.
 
-It may be due hardware issue on your server, or with the hypervisor if it is on a VPS.
+:::warning
+À compléter
+:::
 
-If you are renting your server, contact the support of your provider. Otherwise, try fixing your machine by replacing failing components.
+## Votre serveur est coincé au démarrage
+
+Dans certains cas, votre serveur peut rester coincé au démarrage. Il peut s'agir d'un problème suite à l'installation d'un nouveau kernel. Essayez de choisir un autre kernel avec VNC ou avec l'écran lors du boot.
+
+Si vous êtes en mode `rescue` avec `grub`, dans ce cas il peut s'agir d'un problème de configuration de `grub` ou d'un disque corrompu.
+
+Dans ce cas il faut accéder au disque avec un autre système (mode `rescue` du fournisseur, live USB, lire la carte SD ou le disque dur avec un autre ordinateur) et essayer de vérifier l'intégrité des partitions avec `smartctl`, `fsck` et `mount`.
+
+Si les disques sont corrompus et difficiles à monter, il faut sauvegarder les données et potentiellement refaire un formatage/réinstaller et/ou changer le disque. Si on arrive à monter le disque, il est possible d'utiliser `systemd-nspawn` pour entrer dans la base de données.
+
+Sinon, relancer `grub-update` et `grub-install` en `chroot` ou avec `systemd-nspawn`.
+
+## L’accès en VNC ou via écran ne fonctionne pas
+
+Dans ce cas il peut s'agir d'un problème matériel sur votre serveur physique ou d'un problème d'hyperviseur si c'est un VPS.
+
+Si c'est une machine louée contactez le support de votre fournisseur. Sinon, essayez de dépanner votre machine en retirant les composants qui peuvent être en panne.
