--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/20.ipv6.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/20.ipv6.md
@@ -1,50 +1,51 @@
 ---
-title: Setting up IPv6
+title: Configuration de l'IPv6
 ---
 
-IPv6 may work out of the box in many cases. But in some cases or some specific provider, you may need to tweak things manually to enable IPv6.
+L'IPv6 peut fonctionner directement dans certains cas. Mais dans d'autres, ou chez certains hébergeurs spécifiques, vous devez activer l'IPv6 manuellement.
 
-## With a VPS from OVH
+## Avec un VPS chez OVH
 
-OVH gives one IPv4 address and one IPv6 address for VPS but by default, only IPv4 is OK.
-Please check [The OVH documentation](https://docs.ovh.com/gb/en/vps/configuring-ipv6/).
+OVH donne une adresse IPv4 et une IPv6 pour ses VPS, mais par défaut, seule l'IPv4 fonctionne.
+Veuillez regarder [The OVH documentation](https://docs.ovh.com/gb/en/vps/configuring-ipv6/)
 
-### Configure the DNS server
+### Configurer le serveur DNS
 
 Also check [the documentation for subdomains](/administer/tutorials/domains/dns_subdomains).
 
-### Configure the server
+### Configurer le serveur
 
-On the OVH panel, you will copy 3 elements:
+Sur le panneau de gestion d'OVH, vous aller récupérer 3 informations :
 
-- the IPv6 address
-- the IPv6 gateway address
-- the IPv6 prefix. On OVH's VPS SSD, prefixes are `/128` because you have only *one* IPv6 address.
+- l'adresse IPv6 du serveur
+- l'adresse passerelle IPv6
+- le préfixe IPv6. Les offres VPS SSD d'OVH ne fournissent qu'*une* seule adresse IPV6, le préfixe est donc `/128`
 
-On your VPS, create a backup of the network configuration with : `cp /etc/network/interfaces ~/interfaces` in home directory.
+Sur votre VPS, vous allez créer une sauvegarde de votre fichier de configuration des interfaces réseau dans votre répertoire home avec la commande : `cp /etc/network/interfaces ~/interfaces`.
 Then, you can edit the configuration file (`/etc/network/interfaces`) with the following.
 
 :::note
-In this example, it is assumed that your network interface is `eth0`. If it's different (check with `ip a`) you need to adapt the example below.
+Découvrir et vérifier avec la commande `ip a` l'interface utilisée sur votre VPS ( généralement du type ENS3 chez OVH)
+Dans cet exemple, nous considérons que votre interface réseau est `eth0`. Vous devez adapter l'exemple pour correspondre à votre situation.
 :::
 
 ```text
 iface eth0 inet6 static
-address <your IPv6 address>
-netmask <your IPv6 prefix>
-post-up /sbin/ip -6 route add <the IPv6 gateway> dev eth0
-post-up /sbin/ip -6 route add default via <the IPv6 gateway> dev eth0
-pre-down /sbin/ip -6 route del default via <the IPv6 gateway> dev eth0
-pre-down /sbin/ip -6 route del <the IPv6 gateway> dev eth0
+address <votre adresse IPv6>
+netmask <votre préfixe IPv6>
+post-up /sbin/ip -6 route add <la passerelle IPv6> dev eth0
+post-up /sbin/ip -6 route add default via <la passerelle IPv6> dev eth0
+pre-down /sbin/ip -6 route del default via <la passerelle IPv6> dev eth0
+pre-down /sbin/ip -6 route del <la passerelle IPv6> dev eth0
 ```
 
-Now, save the file and restart the network service with : `service networking restart`. (TODO : ideally we should find a way to validate the content of the configuration, otherwise it could fuck up the network stack and get disconnected from the VPS ?)
+Maintenant, enregistrez le fichier et redémarrez les services réseau avec : `service networking restart`. (TODO : ideally we should find a way to validate the content of the configuration, otherwise it could fuck up the network stack and get disconnected from the VPS ?)
 
-Check your configuration with these commands :
+Vérifiez votre configuration avec les commandes :
 
-- `ip a` to display network interfaces and addresses
-- `hostname -I` to display the system IP addresses
-- try to ping an IPv6 server (for example you can use `ping6 ip6.yunohost.org`)
-- try to ping your server from your PC (assuming your PC has IPv6 enabled)
+- `ip a` pour afficher les adresses IP des interfaces
+- `hostname -I` pour afficher les adresses IP du système
+- essayez de faire un test de `ping` sur un serveur IPv6 (vous pouvez utiliser `ping6 ipv6.yunohost.org`)
+- essayez de faire un test de `ping` sur votre server depuis votre PC (cela exige que votre PC puisse utiliser l'IPv6)
 
-If it's ok, it's ok !
+Et voilà !
