--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/25.blacklist_forms.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/25.blacklist_forms.md
@@ -1,18 +1,17 @@
 ---
-title: Unblacklisting forms
+title: Formulaires de retrait de liste noire
 ---
 
-It could happen sometimes that your IP is blacklisted by some email provider, or anti-spam services. If you receive an alert from the diagnosis tool, click on details to find the unblocking forms.
+Il peut arriver que votre serveur (son adresse IP) soit ajouté à la liste noire de certains fournisseurs d’adresse de courrier électronique ou de services anti-spam. Les courriels envoyés à ces adresses sont alors filtrés et n’arrivent pas à destination.
 
-## Test your server
+#### Testez votre serveur
 
 To check your Email deliverability, YunoHost provide some tests avilables in the Diagnosis tool. This tools evalutes  a lot of configuration and ip reputation points. It gives you also an indicator if some mails are blocked inside the mail queue (waiting to be sent).
 all the points evaluated by [the well known mail-tester.com](https://www.mail-tester.com) except for mail content (usefull if you prepare a newsletter).
 
 However, if you have a doubt on the internal diagnosis results, you could check on external tools:
-
-- by sending an emails : [Mail tester](https://www.mail-tester.com)
-- by providing the public ip : [MultiRBL Valli](https://multirbl.valli.org/) or [Whatismyip](https://whatismyipaddress.com/blacklist-check)
+- En envoyant des emails : [Mail tester](https://www.mail-tester.com)
+- En fournissant l’adresse ip pulbique : [MultiRBL Valli](https://multirbl.valli.org/) ou [Whatismyip](https://whatismyipaddress.com/blacklist-check)
 
 ## Check your mail logs
 
@@ -65,3 +64,4 @@ If you use your own domains and think that some mails are sent by unauthorized s
 ```text
 _dmarc.DOMAIN 3600 IN TXT "v=DMARC1; p=none; fo=1; rua=mailto:example@domain.tld!10m"
 ```
+
