--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/10.change_admin_password.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/10.change_admin_password.md
@@ -1,20 +1,18 @@
 ---
-title: Changing the administration password
+title: Cambiare la password dell'amministratore
 ---
 
-You may want to change your administrator password for security reason or because you forgot it.
+Potrebbe essere necessario cambiare la password dell'amministratore per ragioni di sicurezza o perché l'hai dimenticata.
 
-If you forgot your password or are unable to connect using the `admin` user, you
-may still be able to change the password if you're able to login as `root` on
-SSH (from your local network! or using a rescue mode if you're on a VPS...)
+Se hai dimenticata la password dell'amministratore o se non puoi collegarti usando l'utente `admin` puoi sempre cambiare la password se riesci a collegarti come `root` via SSH (esclusivamente dalla tua rete locale! o usando il modo rescue se stai usando una VPS...)
 
-## Using the web administration interface
+## Usando l'interfaccia web di amministrazione
 
-First, connect to your web administration.
+Innanzitutto collegati all'interfaccia web d'amministrazione.
 
-Then go to Tools > Change administration password.
+Poi vai su Strumenti > Cambia password amministrazione.
 
-## Using the command line interface
+## Usando l'interfaccia a linea di comando
 
 ```bash
 yunohost tools rootpw
