--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/15.noaccess.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/15.noaccess.md
@@ -1,65 +1,65 @@
 ---
-title: Get access back into YunoHost
+title: Riottenere l'accesso a YunoHost
 ---
 
-There are several reasons that could lead to one administrator's access being partially or completely blocked off their YunoHost server. In numerous cases, one of the access methods is blocked, but others are not.
+Ci possono essere diverse ragioni che possono portare al blocco parziale o totale degli accessi a amministratore ad un server YunoHost. Spesso però se un metodo di accesso è bloccato altri sono possibili.
 
-This page will help you diagnose the issue, get back access, and if needed repair your system. Most common causes are listed first, so follow the tutorial from top to bottom.
+Questa pagina cercherà di trovare il problema, riottenere l'accesso ed eventualmente riparare il vostro sistema. Le cause più comuni sono all'inizio per cui siete invitati a seguire questo tutorial dall'inizio.
 
-## You have access to the server with its local IP address, but not its domain name
+## Hai l'accesso al server usando l'indirizzo IP locale ma non dal nome di dominio
 
-### If you are self-hosted at home: fix ports forwarding
+### Se il server è self-hosted a casa: controlla il port forwarding
 
-Check that you are getting access to the server by using its public IP (you can find at [https://ip.yunohost.org](https://ip.yunohost.org). If this does not work:
+Controlla di riuscire ad accedere al server usando l'IP pubblico (lo puoi trovare su [https://ip.yunohost.org](https://ip.yunohost.org)). Se questo non funziona:
 
-- Make sure you have [set up forwarding](/install/post_install/isp_box_config)
-- Some ISP routers do not support *hairpinning*, which prevents you from reaching your server by its domain name from within your local network. If so, you can use a cellular connection, or tweak your `hosts` file on your computer to make it bind your domain name to the local IP address instead of the public one.
+- Assicurati di aver [impostato il forwarding](/install/post_install/isp_box_config).
+- Alcuni ISP non supportano l'*hairpinning*, cosa che ti impedirà di raggiungere il tuo server dal nome di dominio dalla rete locale. Nel caso puoi usare una connessione cellulare o modificare il file `hosts` del tuo computer in modo da associare il nome di dominio all'indirizzo IP locale invece che a quello pubblico.
 
-### Configure DNS records
+### Configura i record DNS
 
 :::tip
-This is not a problem if you are using a domain from `nohost.me`, `noho.st` or `ynh.fr`)
+Questo non è un problema se stai usando un dominio fornito da `nohost.me`, `noho.st` or `ynh.fr`
 :::
 
-You have to configure your [DNS records](/install/post_install/dns_config) (at least `A` records, and `AAAA` if you have an IPv6 connection).
+Devi configurare i tuoi [record DNS](/install/post_install/dns_config) (come minimo i record `A` e `AAAA` se usi una connessione IPv6).
 
-You can check that the DNS records are correct by comparing the results given by [this service](https://www.whatsmydns.net/) with the [IP given by our service](https://ip.yunohost.org).
+Puoi verificare la correttezza dei record DNS confrontando i risultati dati da [questo servizio](https://www.whatsmydns.net/) con l'[IP restituito dal nostro servizio](https://ip.yunohost.org).
 
-### Other probable causes
+### Altre probabili cause
 
-- You domain `noho.st`, `nohost.me`, or `ynh.fr` is unreachable following a failure on YunoHost's infrastructure. Check the [forum](https://forum.yunohost.org/) for announcements or people posting about the same issue.
-- Your domain name may be expired. Check that on your registrar's client panel, or by using the command `whois yourdomain.tld`.
-- You have a dynamic IP address. In that case, you need to set up a script or a client that takes care of regularly update it. Refer to the page on [DNS with a dynamic IP](/administer/tutorials/domains/dns_dynamicip) to see how. You can also use a domain `nohost.me`, `noho.st` or `ynh.fr` that includes this features.
+- Il tuo dominio `noho.st`, `nohost.me` o `ynh.fr` non è raggiungibile a causa di un problema nell'infrastruttura di YunoHost. Controlla il [forum](https://forum.yunohost.org/) per annunci o post di persone relativi allo stesso problema.
+- Il tuo nome di dominio potrebbe essere scaduto. Controlla la pagina del registrar usato per la registrazione oppure usa il comando `whois yourdomain.tld`.
+- Stai usando un indirizzo IP dinamico. In questo caso è necessario impostare uno script o usare un client appositi per aggiornare con regolarità questo indirizzo. Leggi la pagina [DNS with a dynamic IP](/administer/tutorials/domains/dns_dynamicip) per vedere come. Puoi usare anche un dominio `nohost.me`, `noho.st` o `ynh.fr` che comprende queste opzioni.
 
-## You are getting a certificate error that prevents you from reaching the webadmin
+## Stai ricevendo un errore sul certificato che non ti permette di raggiungere la pagina di amministrazione
 
-- A certificate error may be displayed if you have made a typo in the address bar of your browser.
+- Un errore sul certificato può essere visualizzato nel caso in cui hai scritto male l'indirizzo nella barra del browser.
 
-- If you have just installed your server, or just installed a new domain, it uses a self-signed certificate. In that case, it is possible and understandable to add a *temporary* security exception so that you can [install a Let's Encrypt certificate](/administer/admin_guide/domains/certificate), provided you have a secure Internet connection.
+- Sei hai appena installato il tuo server o un nuovo dominio stai usando un certificato auto-firmato. In questo caso è possibile e comprensibile aggiungere una eccezione di sicurezza *temporanea* in modo che sia possibile [installare un certificato Let's Encrypt](/administer/admin_guide/domains/certificate), ammesso che tu abbian una connessione Internet sicura.
 
-## You have access via SSH but not via the webadmin, or inversely
+## Puoi accedere via SSH ma non dalla pagina di amministrazione o l'inverso
 
-### You are trying to log in with SSH as `root` instead of `admin` user
+### Stai provando a loggarti via SSH come `root` invece che con l'utente `admin`
 
-By default, SSH connection has to be made as `admin`. It possible to log into the server as `root` *only from the local network of the server*. If your server is a VPS, the web console or VNC provided by VPS providers may work.
+Di default è possibile loggarsi via SSH solo come `admin`. È possibile loggarsi come `root` *solo dall'interno della rete locale del server*. Se il server è su una VPS la console web o VNC fornita dal provider DPS dovrebbe funzionare.
 
-If you are running `yunohost` commands in the CLI as `admin`, you have to call them with `sudo` before (for example `sudo yunohost user list`). You can also become `root` by running `sudo su`.
+Se stai provando ad avviare i comandi `yunohost` dalla riga di comando come `admin` è necessario avviarlo preceduto dal comando `sudo` (ad esempio `sudo yunohost user list`). È possibile diventare `root` anche con il comando `sudo su`.
 
-### You have been temporarily banned
+### Sei stato bannato temporaneamente
 
-Your YunoHost server includes a service, Fail2ban, which automatically bans IPs that fail several times in a row to log in. In some cases it can be software (e.g. Nextcloud client) that are confifured with an old password, or a user who has the same IP as you have.
+Il tuo server YunoHost include il servizio Fail2Ban che banna automaticamente gli indirizzi IP che falliscono più volte di seguito. In alcuni casi possono essere programmi configurati con password vecchie (ad esempio client Nextcloud) oppure un utente che ha il tuo stesso IP.
 
-If you have been banned while trying to access a web page, and only web pages are unreachable, you may have access to your server via SSH. Similarly, if you have been banned from SSH, webadmin access may work.
+Se sei stato bannato provando ad accedere ad una pagina web sarà irraggiungibile solo questa e potrai collegarti al tuo server via SSH. Viceversa se sei stato bannati da SSH la pagina di amministrazione funzionerà.
 
-If you have been banned from both SSH and webadmin, you can try to reach your server through another IP address. For example through the cellular network of your phone, a VPN, Tor, or another proxy.
+Se sei stato bannato sia da SSH che dalla pagina di amministrazione puoi provare a raggiungere il tuo server attraverso un altro indirizzo IP. Ad esempio puoi provare a collegarti usando la connessione cellulare del tuo telefono, attraverso una VPN, Tor o un altro proxy.
 
-See also : [unban an IP on Fail2Ban](/administer/troubleshooting/fail2ban)
+Vedi anche: [togliere il ban ad un indirizzo](/administer/troubleshooting/fail2ban)
 
 :::note
-Ban are usually 10 to 12-minute-long, and on IPv4 only.
+I ban normalmente durano dai 0 ai 12 minuti e solo su IPv4.
 :::
 
-### NGINX web server is broken
+### Il server web NGINX non funziona
 
 Maybe the NGINX web server is out of order. You can check that [trough SSH](/administer/admin_guide/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
 
