--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/20.ipv6.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/20.ipv6.md
@@ -1,31 +1,31 @@
 ---
-title: Setting up IPv6
+title: Impostare IPv6
 ---
 
-IPv6 may work out of the box in many cases. But in some cases or some specific provider, you may need to tweak things manually to enable IPv6.
+IPv6 dovrebbe funzionare automaticamente in molti casi ma in alcune situzioni o con alcuni provider può essere necessario configurare alcune impostazioni direttamante per abilitarlo.
 
-## With a VPS from OVH
+## Usando una VPS di OVH
 
-OVH gives one IPv4 address and one IPv6 address for VPS but by default, only IPv4 is OK.
+OVH fornisce un indirizzo IPv4 e uno IPv6 ma di default funziona solo il primo.
 Please check [The OVH documentation](https://docs.ovh.com/gb/en/vps/configuring-ipv6/).
 
-### Configure the DNS server
+### Configurare il server DNS
 
 Also check [the documentation for subdomains](/administer/tutorials/domains/dns_subdomains).
 
-### Configure the server
+### Configurare il server
 
-On the OVH panel, you will copy 3 elements:
+Nella pagina di configurazione di OVH dovrai copiare questi 3 elementi:
 
-- the IPv6 address
-- the IPv6 gateway address
-- the IPv6 prefix. On OVH's VPS SSD, prefixes are `/128` because you have only *one* IPv6 address.
+- l'indirizzo IPv6
+- l'indirizzo del gateway IPv6
+- il prefisso IPv6. Nelle VPS SSD di OVH i prefissi sono `/128` perché hai a disposizione solo *uno* indirizzo IPv6.
 
-On your VPS, create a backup of the network configuration with : `cp /etc/network/interfaces ~/interfaces` in home directory.
-Then, you can edit the configuration file (`/etc/network/interfaces`) with the following.
+Nella tua VPS crea un backup  della configurazione di rete con il comando: `cp /etc/network/interfaces ~/interfaces` nella directory home.
+Poi puoi modificare il file di configurazione (`/etc/network/interfaces`) come indicato di seguito. Considera però che:
 
 :::note
-In this example, it is assumed that your network interface is `eth0`. If it's different (check with `ip a`) you need to adapt the example below.
+In questo esempio si assume che il nome della tua interfaccia di rete sia `eth0`. Nel caso invece che sia differente (controlla con il comando `ip a`) devi adattare di conseguenza l'esempio qui sotto.
 :::
 
 ```text
