--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/25.blacklist_forms.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/25.blacklist_forms.md
@@ -1,10 +1,10 @@
 ---
-title: Unblacklisting forms
+title: Form per togliersi dalle blacklist
 ---
 
-It could happen sometimes that your IP is blacklisted by some email provider, or anti-spam services. If you receive an alert from the diagnosis tool, click on details to find the unblocking forms.
+Può succedere talvolta che il tuo IP venga inserito nelle blacklist da parte di alcuni provider di email o da servizi anti-spam.
 
-## Test your server
+## Prova il tuo server
 
 To check your Email deliverability, YunoHost provide some tests avilables in the Diagnosis tool. This tools evalutes  a lot of configuration and ip reputation points. It gives you also an indicator if some mails are blocked inside the mail queue (waiting to be sent).
 all the points evaluated by [the well known mail-tester.com](https://www.mail-tester.com) except for mail content (usefull if you prepare a newsletter).
